// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Card Details renders Special Offer text when isSpecialOffer is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResultCardDetails
    currency="$"
    isSpecialOffer={true}
    price="30"
    rating={4.8}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="result_card_details__rating col-xs-4 col-sm"
        >
          <Ratings
            rating={4.8}
          >
            <span>
              4.8/5
            </span>
          </Ratings>
        </div>,
        <div
          className="result_card_details__pricing col-xs col-sm"
        >
          <span
            className="result_card_details__special_offer"
          >
            Special Offer
          </span>
          <span
            className="result_card_details__price"
          >
            $30
          </span>
        </div>,
      ],
      "className": "result_card_details row between-xs middle-xs",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Ratings
            rating={4.8}
          >
            <span>
              4.8/5
            </span>
          </Ratings>,
          "className": "result_card_details__rating col-xs-4 col-sm",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span>
              4.8/5
            </span>,
            "rating": 4.8,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "4.8/5",
            },
            "ref": null,
            "rendered": "4.8/5",
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="result_card_details__special_offer"
            >
              Special Offer
            </span>,
            <span
              className="result_card_details__price"
            >
              $30
            </span>,
          ],
          "className": "result_card_details__pricing col-xs col-sm",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Special Offer",
              "className": "result_card_details__special_offer",
            },
            "ref": null,
            "rendered": "Special Offer",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "$30",
              "className": "result_card_details__price",
            },
            "ref": null,
            "rendered": "$30",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="result_card_details__rating col-xs-4 col-sm"
          >
            <Ratings
              rating={4.8}
            >
              <span>
                4.8/5
              </span>
            </Ratings>
          </div>,
          <div
            className="result_card_details__pricing col-xs col-sm"
          >
            <span
              className="result_card_details__special_offer"
            >
              Special Offer
            </span>
            <span
              className="result_card_details__price"
            >
              $30
            </span>
          </div>,
        ],
        "className": "result_card_details row between-xs middle-xs",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Ratings
              rating={4.8}
            >
              <span>
                4.8/5
              </span>
            </Ratings>,
            "className": "result_card_details__rating col-xs-4 col-sm",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span>
                4.8/5
              </span>,
              "rating": 4.8,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "4.8/5",
              },
              "ref": null,
              "rendered": "4.8/5",
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="result_card_details__special_offer"
              >
                Special Offer
              </span>,
              <span
                className="result_card_details__price"
              >
                $30
              </span>,
            ],
            "className": "result_card_details__pricing col-xs col-sm",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Special Offer",
                "className": "result_card_details__special_offer",
              },
              "ref": null,
              "rendered": "Special Offer",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$30",
                "className": "result_card_details__price",
              },
              "ref": null,
              "rendered": "$30",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Result Card Details renders without crash 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResultCardDetails
    currency="$"
    isSpecialOffer={false}
    price="30"
    rating={4.8}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="result_card_details__rating col-xs-4 col-sm"
        >
          <Ratings
            rating={4.8}
          >
            <span>
              4.8/5
            </span>
          </Ratings>
        </div>,
        <div
          className="result_card_details__pricing col-xs col-sm"
        >
          <span
            className="result_card_details__price"
          >
            $30
          </span>
        </div>,
      ],
      "className": "result_card_details row between-xs middle-xs",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Ratings
            rating={4.8}
          >
            <span>
              4.8/5
            </span>
          </Ratings>,
          "className": "result_card_details__rating col-xs-4 col-sm",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span>
              4.8/5
            </span>,
            "rating": 4.8,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "4.8/5",
            },
            "ref": null,
            "rendered": "4.8/5",
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <span
              className="result_card_details__price"
            >
              $30
            </span>,
          ],
          "className": "result_card_details__pricing col-xs col-sm",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "$30",
              "className": "result_card_details__price",
            },
            "ref": null,
            "rendered": "$30",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="result_card_details__rating col-xs-4 col-sm"
          >
            <Ratings
              rating={4.8}
            >
              <span>
                4.8/5
              </span>
            </Ratings>
          </div>,
          <div
            className="result_card_details__pricing col-xs col-sm"
          >
            <span
              className="result_card_details__price"
            >
              $30
            </span>
          </div>,
        ],
        "className": "result_card_details row between-xs middle-xs",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Ratings
              rating={4.8}
            >
              <span>
                4.8/5
              </span>
            </Ratings>,
            "className": "result_card_details__rating col-xs-4 col-sm",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span>
                4.8/5
              </span>,
              "rating": 4.8,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "4.8/5",
              },
              "ref": null,
              "rendered": "4.8/5",
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <span
                className="result_card_details__price"
              >
                $30
              </span>,
            ],
            "className": "result_card_details__pricing col-xs col-sm",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$30",
                "className": "result_card_details__price",
              },
              "ref": null,
              "rendered": "$30",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
